--- a/styles.css
+++ b/styles.css
@@ -57,4 +57,10 @@ body {
   margin-right: calc(var(--width) / -2);  
   z-index: 2;
 }
+.white.active {
+  background-color: #ccc;
+}
 
+.black.active {
+  background-color: #333;
+}
